--- a/rtl/projeto-final-mc613-boliche.qsf
+++ b/rtl/projeto-final-mc613-boliche.qsf
@@ -49,11 +49,6 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
-set_global_assignment -name QIP_FILE vga_pll.qip
-set_global_assignment -name VHDL_FILE vga_pll.vhd
-set_global_assignment -name VHDL_FILE vgacon.vhd
-set_global_assignment -name VHDL_FILE vga_ball.vhd
-set_global_assignment -name VHDL_FILE test.vhd
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_location_assignment PIN_AJ4 -to ADC_CS_N
@@ -885,10 +880,17 @@ set_instance_assignment -name PACKAGE_SKEW_COMPENSATION OFF -to HPS_DDR3_WE_N -e
 set_instance_assignment -name PACKAGE_SKEW_COMPENSATION OFF -to HPS_DDR3_RESET_N -entity DE1_SoC
 set_instance_assignment -name PACKAGE_SKEW_COMPENSATION OFF -to HPS_DDR3_CK_P -entity DE1_SoC
 set_instance_assignment -name PACKAGE_SKEW_COMPENSATION OFF -to HPS_DDR3_CK_N -entity DE1_SoC
-set_global_assignment -name VHDL_FILE "projeto-final-mc613-boliche.vhd"
-set_global_assignment -name VHDL_FILE tela.vhd
-set_global_assignment -name VHDL_FILE pinos.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE kbdex_ctrl.vhd
+set_global_assignment -name VHDL_FILE ps2_iobase.vhd
+set_global_assignment -name QIP_FILE vga_pll.qip
+set_global_assignment -name VHDL_FILE vga_pll.vhd
+set_global_assignment -name VHDL_FILE vgacon.vhd
+set_global_assignment -name VHDL_FILE "projeto-final-mc613-boliche.vhd"
+set_global_assignment -name VHDL_FILE tela.vhd
+set_global_assignment -name VHDL_FILE kbd_bowling.vhd
+set_global_assignment -name VHDL_FILE bowling_keys.vhd
+set_global_assignment -name VHDL_FILE kbd_bowling_ctrl.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
